fixed header elements spacing

--- a/DominoClone/src/App.css
+++ b/DominoClone/src/App.css
@@ -4,10 +4,19 @@ body {
 
 .primary-nav {
   display: flex;
-  box-shadow: rgba(0, 0, 0, 0.75) 0px 0px 0.8125rem 0px;
+  margin: 0px auto;
+  max-width: 60rem;
+  padding:0px 0.9375rem;
+  text-transform: uppercase;
+}
+.primary-nav-items, a {
+margin-inline:.5rem;
+text-decoration: none;
 }
 .primary-nav-container {
- background-color: rgb(0, 100, 145)
+ background-color: rgb(0, 100, 145);
+ box-shadow: rgba(0, 0, 0, 0.75) 0px 0px 0.8125rem 0px;
+
 }
 .options {
   display: flex;
